spacing fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,7 +31,7 @@ body{
 }
 .hero h1{
   margin-top: 0px;
-  margin-bottom: 5px;
+  margin-bottom: 2px;
   font-size: 40px;
   color: #ffffff;
 }
@@ -51,7 +51,7 @@ h1{
 .welcome h1{
   font-size: 60px;
   color: #ffffff;
-  margin-bottom: 7px;
+  margin-bottom: 5px;
   margin-top: 7px;
 }
 .signIn{
